--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@
 # Ignore the server secrets (e.g. ssl keys)
 secret/
 
-# Ignore the test file
+# Ignore the test file and install instructions
 test.js
+install.txt
